[tool.poetry]
name = "repl_python3_PrizeIrritatingScandisk"
version = "0.1.0"
description = ""
authors = ["RishiNandhaVanc <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"
reactions = "^0.0.1"
discord-pretty-help = "^1.3.0"
pickle-repl = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
